# memcord

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-25_000000-semantic-cache-library.md
contrib/: memcord.service
memcord/: __init__.py  cli.py  embedding.py  health.py  metrics.py  model_presets.py  security.py
memcord/backends/: __init__.py  anthropic_backend.py  base.py  claude_code.py  ollama_backend.py  openai_backend.py
memcord/cache/: __init__.py  faq_cache.py  semantic_cache.py
memcord/discord_/: __init__.py  bot.py
tests/: backend_smoke_test.py  conftest.py  smoke_test.py  test_backends.py  test_bot.py  test_cache.py  test_security_smoke.py  test_semantic_cache.py  verify_hardening.py
