[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memcord"
version = "0.1.0"
description = "Self-learning Discord FAQ bot with semantic caching — LLM-agnostic"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Vid Cresnik"}]
keywords = ["discord", "faq", "cache", "semantic", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "discord.py>=2.3",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = ["httpx>=0.27"]

[project.scripts]
memcord = "memcord.cli:main"

[tool.setuptools.packages.find]
include = ["memcord*"]
