[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcord"
version = "0.1.0"
description = "Self-learning Discord FAQ bot with semantic caching"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VidyaPuri"},
]
keywords = ["discord", "faq", "bot", "semantic-cache", "chromadb", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "discord.py>=2.3",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.39"]
ollama = ["httpx>=0.27"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.11"]

[project.scripts]
memcord = "memcord.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["memcord"]
include = [
    "memcord/**/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
